--- a/InformeLaboratorio03.tex
+++ b/InformeLaboratorio03.tex
@@ -78,7 +78,7 @@ INTELIGENCIA DE NEGOCIOS\\
 \begin{large}
 \textbf{Estudiante:} \\
 \begin{flushleft}
-José Edilberto Pastor Mendoza  \hfill	(2016055237)\\
+Anthony Richard Robles Flores  \hfill	(2016056192)\\
 
 \centering  %CENTRA UN TEXTO
 \vspace*{0.9in}
